@@ -5,6 +5,7 @@
 <body>
 <ul>
 <li>Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.</li>
+<li>Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.</li>
 <li></li>
 </ul>
 </body>
