@@ -12,6 +12,7 @@ Thanks!
 2.3.0.2301
 ----------
 - Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
+- Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.
 
 
 2.3.0.2300
